--- a/test.html
+++ b/test.html
@@ -31,49 +31,17 @@
 <script src="https://highlightjs.org/static/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
-<pre><code class="nginx">
-server{
-listen 80;
-server_name example.com www.example.com;    
-#绑定的域名
+<pre><code class="bash">
+#开启转发
+echo 1 > /proc/sys/net/ipv4/ip_forward  
 
-index index.php;      
-#默认首页
+#加载转发模块
+modprobe iptable_nat
+modprobe ip_conntrack_ftp
+modprobe ip_nat_ftp
 
-access_log off;		
-#off 关闭日志
-
-location / {
-proxy_cache_key "$scheme://$host$request_uri";
-#缓存key规则，用于自动清除缓存。
-
-proxy_cache cache_one; 
-#缓存区名称，与前面定义的相同
-
-proxy_cache_valid  200 304 3h;
-proxy_cache_valid 301 3d;
-proxy_cache_valid any 10s;
-#200 304状态缓存3小时
-301状态缓存3天
-其他状态缓存（如502 404）10秒
-
-proxy_set_header   X-Real-IP  $remote_addr;
-proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-#向后端传递访客ip
-
-proxy_set_header   Referer http://example.com;	
-#强制定义Referer，程序验证判断会用到
-
-proxy_set_header   Host $host;
-#定义主机头
-
-proxy_pass http://1.2.3.4;	
-#指定后端ip，可以加端口
-
-#proxy_cache_use_stale invalid_header error timeout http_502;
-#当后端出现错误、超时、502状态时启用过期缓存，慎用。
-        }
-}
+iptables -t nat -A PREROUTING -d 本机ip -p tcp --dport 21 -j DNAT --to 目标ip:端口
+iptables -t nat -A POSTROUTING -d 目标ip -p tcp --dport 21 -j SNAT --to 本机ip
 </code></pre>
 
 <!-- markdown end -->
@@ -86,49 +54,17 @@ proxy_pass http://1.2.3.4;
 
 <script>hljs.initHighlightingOnLoad();</script>
 
-<pre><code class="nginx">
-server{
-listen 80;
-server_name example.com www.example.com;    
-#绑定的域名
+<pre><code class="bash">
+#开启转发
+echo 1 &gt; /proc/sys/net/ipv4/ip_forward  
 
-index index.php;      
-#默认首页
+#加载转发模块
+modprobe iptable_nat
+modprobe ip_conntrack_ftp
+modprobe ip_nat_ftp
 
-access_log off;        
-#off 关闭日志
-
-location / {
-proxy_cache_key "$scheme://$host$request_uri";
-#缓存key规则，用于自动清除缓存。
-
-proxy_cache cache_one; 
-#缓存区名称，与前面定义的相同
-
-proxy_cache_valid  200 304 3h;
-proxy_cache_valid 301 3d;
-proxy_cache_valid any 10s;
-#200 304状态缓存3小时
-301状态缓存3天
-其他状态缓存（如502 404）10秒
-
-proxy_set_header   X-Real-IP  $remote_addr;
-proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-#向后端传递访客ip
-
-proxy_set_header   Referer http://example.com;    
-#强制定义Referer，程序验证判断会用到
-
-proxy_set_header   Host $host;
-#定义主机头
-
-proxy_pass http://1.2.3.4;    
-#指定后端ip，可以加端口
-
-#proxy_cache_use_stale invalid_header error timeout http_502;
-#当后端出现错误、超时、502状态时启用过期缓存，慎用。
-        }
-}
+iptables -t nat -A PREROUTING -d 本机ip -p tcp --dport 21 -j DNAT --to 目标ip:端口
+iptables -t nat -A POSTROUTING -d 目标ip -p tcp --dport 21 -j SNAT --to 本机ip
 </code></pre>
 <!-- content end -->
 </div>
