--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 <script src="https://highlightjs.org/static/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
-<pre><code class="bash">
+<pre><code class="shell">
 #开启转发
 echo 1 > /proc/sys/net/ipv4/ip_forward  
 
@@ -54,7 +54,7 @@ iptables -t nat -A POSTROUTING -d 目标ip -p tcp --dport 21 -j SNAT --to 本机
 
 <script>hljs.initHighlightingOnLoad();</script>
 
-<pre><code class="bash">
+<pre><code class="shell">
 #开启转发
 echo 1 &gt; /proc/sys/net/ipv4/ip_forward  
 
