--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Simple</title>
     <link rel="shortcut icon" href="/static/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="main.css" />
+<!----代码高亮--highlight.js--> 
+<link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/default.css">
+<script src="https://highlightjs.org/static/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<!--END-->
 </head>
 <body>
 <div class="main">
